@@ -1,6 +1,6 @@
 AT_BANNER([LIXA recovery heuristically completed TX])
 
-AT_SETUP([Cold commit heurstically completed TX])
+AT_SETUP([Cold commit heuristically completed TX])
 AT_DATA([monkey1s.conf],
 [[# first monkey R.M. config
 xa_open/0
@@ -29,7 +29,7 @@ xa_recover/1
 xa_commit/8
 xa_forget/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset lixar -b -p -x 11111111-2222-3333-4444-555555555555.66666666-7777-8888-9999-000000000000 -c], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle lixar -b -p -x 11111111-2222-3333-4444-555555555555.66666666-7777-8888-9999-000000000000 -c], [0], [ignore], [ignore])
 AT_CLEANUP
 
 AT_SETUP([Cold rollback heurstically completed TX])
@@ -61,6 +61,136 @@ xa_recover/1
 xa_rollback/8
 xa_forget/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset lixar -b -p -x 11111111-2222-3333-4444-555555555555.66666666-7777-8888-9999-000000000000 -r], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle lixar -b -p -x 11111111-2222-3333-4444-555555555555.66666666-7777-8888-9999-000000000000 -r], [0], [ignore], [ignore])
+AT_CLEANUP
+
+AT_SETUP([Cold commit heuristically completed TX 2])
+AT_DATA([monkey1s.conf],
+[[# first monkey R.M. config
+xa_open/0
+xa_start/0
+xa_end/0
+xa_prepare/0
+xa_commit/5
+xa_close/0
+]])
+AT_DATA([monkey2s.conf],
+[[# second monkey R.M. config
+xa_open/0
+xa_start/0
+xa_end/0
+xa_prepare/0
+xa_commit/6
+xa_close/0
+]])
+AT_DATA([monkey1d.conf],
+[[# third monkey R.M. config
+xa_open/0
+xa_end/0
+xa_prepare/0
+xa_commit/7
+xa_close/0
+]])
+AT_DATA([monkey2d.conf],
+[[# third monkey R.M. config
+xa_open/0
+xa_end/0
+xa_prepare/0
+xa_commit/8
+xa_close/0
+]])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset start case0002 commit], [0], [ignore], [ignore])
+AT_DATA([monkey1s.conf],
+[[# first monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_commit/5
+xa_forget/0
+]])
+AT_DATA([monkey2s.conf],
+[[# second monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_commit/6
+xa_forget/0
+]])
+AT_DATA([monkey1d.conf],
+[[# third monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_commit/7
+xa_forget/0
+]])
+AT_DATA([monkey2d.conf],
+[[# fourth monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_commit/8
+xa_forget/0
+]])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh noreset stop lixar -b -p -x 11111111-2222-3333-4444-555555555555.66666666-7777-8888-9999-000000000000 -c], [0], [ignore], [ignore])
+AT_CLEANUP
+
+AT_SETUP([Cold rollback heuristically completed TX 2])
+AT_DATA([monkey1s.conf],
+[[# first monkey R.M. config
+xa_open/0
+xa_start/0
+xa_end/0
+xa_rollback/5
+xa_close/0
+]])
+AT_DATA([monkey2s.conf],
+[[# second monkey R.M. config
+xa_open/0
+xa_start/0
+xa_end/0
+xa_rollback/6
+xa_close/0
+]])
+AT_DATA([monkey1d.conf],
+[[# third monkey R.M. config
+xa_open/0
+xa_end/0
+xa_rollback/7
+xa_close/0
+]])
+AT_DATA([monkey2d.conf],
+[[# third monkey R.M. config
+xa_open/0
+xa_end/0
+xa_rollback/8
+xa_close/0
+]])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset start case0002 rollback], [0], [ignore], [ignore])
+AT_DATA([monkey1s.conf],
+[[# first monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_rollback/5
+xa_forget/0
+]])
+AT_DATA([monkey2s.conf],
+[[# second monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_rollback/6
+xa_forget/0
+]])
+AT_DATA([monkey1d.conf],
+[[# third monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_rollback/7
+xa_forget/0
+]])
+AT_DATA([monkey2d.conf],
+[[# fourth monkey R.M. config
+xa_open/0
+xa_recover/1
+xa_rollback/8
+xa_forget/0
+]])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh noreset stop lixar -b -p -x 11111111-2222-3333-4444-555555555555.66666666-7777-8888-9999-000000000000 -r], [0], [ignore], [ignore])
 AT_CLEANUP
 
